update:完成上传图片、文件服务，修改错误
