# docs/swagger.json
@@ -278,7 +278,6 @@
                         "description": "状态",
                         "name": "state",
                         "in": "body",
-                        "required": true,
                         "schema": {
                             "type": "integer"
                         }
@@ -563,7 +562,6 @@
                         "description": "状态",
                         "name": "state",
                         "in": "body",
-                        "required": true,
                         "schema": {
                             "type": "integer"
                         }
@@ -623,6 +621,57 @@
                         "description": "成功",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "请求错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/upload/file": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "上传文件",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "上传文件",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            1,
+                            2,
+                            3
+                        ],
+                        "description": "文件格式",
+                        "name": "type",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/service.FileInfo"
                         }
                     },
                     "400": {
@@ -776,6 +825,17 @@
                     "type": "string"
                 },
                 "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.FileInfo": {
+            "type": "object",
+            "properties": {
+                "accessUrl": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
